--- a/src/index.css
+++ b/src/index.css
@@ -463,6 +463,18 @@ body{
   outline: none !important;
 }
 
+.wrap-long {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
